[SPARK-56955][CONNECT] Replace -Dio.netty.noUnsafe=false with --sun-misc-unsafe-memory-access=allow for a more complete JDK 25+ support
### What changes were proposed in this pull request?

Avoiding the `java.lang.UnsupportedOperationException` for `spark-shell --remote` on JDK25.

This PR is simply replaces `-Dio.netty.noUnsafe=false` with `--sun-misc-unsafe-memory-access=allow`.
This new flag does not cause any issue for earlier JDK versions as `-XX:+IgnoreUnrecognizedVMOptions` is already used.

### Why are the changes needed?

On JDK 25 when `spark-shell` is started with `--remote` flag we get an exception at the start:

```
$ ./bin/spark-shell --remote sc://localhost:15002
WARNING: Using incubator modules: jdk.incubator.vector
WARNING: package sun.security.action not in java.base
26/05/19 17:38:31 INFO BaseAllocator: Debug mode disabled. Enable with the VM option -Darrow.memory.debug.allocator=true.
26/05/19 17:38:31 INFO DefaultAllocationManagerOption: allocation manager type not specified, using netty as the default type
26/05/19 17:38:31 INFO CheckAllocator: Using DefaultAllocationManager at memory/netty/DefaultAllocationManagerFactory.class
Exception in thread "main" java.lang.ExceptionInInitializerError
	at org.sparkproject.org.apache.arrow.memory.netty.DefaultAllocationManagerFactory.<clinit>(DefaultAllocationManagerFactory.java:26)
	at java.base/java.lang.Class.forName0(Native Method)
	at java.base/java.lang.Class.forName(Class.java:467)
	at java.base/java.lang.Class.forName(Class.java:458)
	at org.sparkproject.org.apache.arrow.memory.DefaultAllocationManagerOption.getFactory(DefaultAllocationManagerOption.java:105)
	at org.sparkproject.org.apache.arrow.memory.DefaultAllocationManagerOption.getDefaultAllocationManagerFactory(DefaultAllocationManagerOption.java:92)
	at org.sparkproject.org.apache.arrow.memory.BaseAllocator$Config.getAllocationManagerFactory(BaseAllocator.java:826)
	at org.sparkproject.org.apache.arrow.memory.ImmutableConfig.access$001(Imm